right side fixed!

--- a/frontend/experiment.html
+++ b/frontend/experiment.html
@@ -176,9 +176,9 @@ rel="stylesheet"/>
                 <div class="popup">Welcome to Slide 3!</div>
             </div>
 
-
+<!--section4-->
             <div class="section" id="section4">
-                <div class="slide3">
+                <div class="slide4">
                     <div class="about">
                         <h3>LET'S KEEP IN TOUCH</h3>          <i class="ri-telegram-2-line"></i>
                     </div>
